# pincher

./: .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  Cargo.toml  FINDINGS.md  GEMINI.md  LICENSE  README.md
.decapod/: README.md  config.toml
.github/workflows/: decapod-validate.yml
examples/: agent_workflow.rs
src/: governed_run.rs  lib.rs  main.rs
src/decapod/: agent.rs  broker.rs  capabilities.rs  cli.rs  commitment.rs  coordination.rs  docs.rs  governance.rs  mod.rs  rpc.rs  session.rs  todo.rs  validate.rs  workspace.rs  workunit.rs
src/decapod/agent/: model.rs
tests/: governed_run_contract.rs
