[package]
name = "pincher"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4"] }
ulid = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
dirs = "6"
hostname = "0.4"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "pincher"
path = "src/main.rs"

[lib]
name = "pincher"
path = "src/lib.rs"
